[gd_scene load_steps=5 format=3 uid="uid://cwhukrgyaq1pf"]

[ext_resource type="Script" uid="uid://b1412p6yha8a4" path="res://cerecamp_mogiana.gd" id="1_d8xlv"]
[ext_resource type="Texture2D" uid="uid://scdo6cwytciw" path="res://img/cerecamp-mogiana.jpg" id="1_hiewa"]
[ext_resource type="PackedScene" uid="uid://n386jdcbvm5m" path="res://controls.tscn" id="3_gi3fk"]
[ext_resource type="PackedScene" uid="uid://bfjh6bn4m6uke" path="res://score.tscn" id="4_gi3fk"]

[node name="CerecampMogiana" type="Node2D"]
script = ExtResource("1_d8xlv")

[node name="TextureRect" type="TextureRect" parent="."]
visible = false
offset_right = 40.0
offset_bottom = 40.0
texture = ExtResource("1_hiewa")

[node name="Controls" parent="." instance=ExtResource("3_gi3fk")]
visible = false

[node name="Score" parent="." instance=ExtResource("4_gi3fk")]
visible = false

[connection signal="ended" from="Controls" to="." method="_on_controls_ended"]
[connection signal="next" from="Score" to="." method="_on_score_next"]
[connection signal="reset" from="Score" to="." method="_on_score_reset"]
